fixed a overflow to the side

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,9 +9,13 @@ $color-white: rgb(255, 255, 255);
 
   .dark-green-background {
     display: flex !important;
-    justify-content: center !important;
+    justify-content: space-evenly !important;
     align-items: center !important;
     background-color: $color-green !important;
+    a {
+      text-decoration: none;
+      color: white;
+    }
     img {
       width: 10%;
     }
@@ -182,6 +186,17 @@ $color-white: rgb(255, 255, 255);
 
   .dark-green-background {
     background-color: $color-green !important;
+    display: flex !important;
+    justify-content: space-evenly !important;
+    align-items: center !important;
+    background-color: $color-green !important;
+    margin-bottom: 5%;
+    padding-bottom: 2.5%;
+    padding-top: 2.5%;
+    a {
+      text-decoration: none;
+      color: white;
+    }
     span {
       width: 20%;
     }
@@ -203,6 +218,7 @@ $color-white: rgb(255, 255, 255);
   }
 
   .The-Show {
+    padding-top: 7.5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -236,6 +252,8 @@ $color-white: rgb(255, 255, 255);
     }
   }
   .The-Show-two {
+    padding-top: 7.5%;
+
     color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column-reverse;
@@ -268,13 +286,14 @@ $color-white: rgb(255, 255, 255);
   }
 
   .Seperator {
+    padding-top: 7.5%;
+
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: $color-green;
-    padding-top: 5%;
     p {
       width: 80%;
       font-size: large;
@@ -305,6 +324,7 @@ $color-white: rgb(255, 255, 255);
   }
 
   .footer-style {
+    padding-top: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -343,8 +363,8 @@ $color-white: rgb(255, 255, 255);
   }
 
   .Python-Projects {
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 7.5%;
+    padding-bottom: 7.5%;
     background: rgb(255, 255, 255);
     background: linear-gradient(
       180deg,
